# OpenGLPhysicsEngine

./: CMakeLists.txt  README.md
common/: controls.cpp  controls.hpp  models.cpp  models.hpp  objloader.cpp  texture.cpp  windowlib.cpp  windowlib.hpp
shaders/: fragmentshader.glsl  vertexshader.glsl
src/: CMakeLists.txt  main.cpp
src/shaders/: fragmentshader.glsl  vertexshader.glsl
